mobile view overflow x fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -932,6 +932,7 @@ a {
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
